--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,9 @@
   "version": "1.1",
   "description": "Blocks multiple websites dynamically.",
   "permissions": ["declarativeNetRequest", "storage"],
+  "icons": {
+    "48" : "icons/nowww-48.png"
+  },
   "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html"
